0.2.11 2024-1-10
    - Upgrade dependency on Jackson following dependabot.
    - Upgrade dependency on Maven following dependabot.

0.2.10 2023-11-30
    - Change default api port to 443.
    - Update dependency of logback-classic.
    - Add warning regarding protected data.
    - Do not rely on cookie path for session riding.

      This fixes a security issue! Please update!

0.2.9 2023-10-4
    - Remove Cobertura to be compatible with
      Java 11.
    - Upgrade dependencies following dependabot.
    - Exclude module-info in pom (removes warning)
    - Remove unnecessary imports
    - Update deprecated Configuration constructor
    - Add Dockerfile.

0.2.8 2022-10-05
    - Upgrade dependencies following dependabot.
      This fixes CVE-2022-42003! Please update!

0.2.7 2021-10-13
    - Upgrade dependency on Junit following dependabot.
    - Upgrade dependency on Jackson following dependabot.
    - Upgrade dependency on Jetty following dependabot.
    - Setup encoding in pom to make build platform
      independent.
    - Improve check for defined query.

0.2.6 2021-09-07
    - Fix xml binding for newer java versions.
    - Add support for parameterized config file.

0.2.5 2021-05-27
    - Silence logging in tests.
    - Sanitize CSV export for security reasons.

0.2.4 2021-05-07
    - Fix temporary session-riding capabilities.
    - Introduced central tinylog.
    - Fix nullpointer in RTF export.
    - Fix nullpointer in CSV export.
    - Improve error messages to avoid information leakage.

0.2.3 2021-03-24
    - Added trail info to RTF export.