@@ -1,0 +1,1 @@
+version=${project.version}
