@@ -1,6 +1,7 @@
 0.2.11 2024-1-10
     - Upgrade dependency on Jackson following dependabot.
     - Upgrade dependency on Maven following dependabot.
+    - Retrieves the version of the export plugin from pom.xml (closes #99)
 
 0.2.10 2023-11-30
     - Change default api port to 443.
